- cors api header - api key todas as rotas de api - retirada api key rota view - adicionado api key na view
