# app/routes.php
@@ -2,6 +2,7 @@
 
 use App\Application\Controllers\CidadeController;
 use App\Application\Controllers\EstadoController;
+use App\Application\Middleware\ApiKeyMiddleware;
 use Psr\Http\Message\ResponseInterface as Response;
 use Psr\Http\Message\ServerRequestInterface as Request;
 use Slim\App;
@@ -19,25 +20,36 @@ use Slim\App;
  * @OA\Server(url="http://localhost:8080")
  */
 
+ /**
+ * @OA\SecurityScheme(
+ *   securityScheme="apiKey",
+ *   type="apiKey",
+ *   in="header",
+ *   name="X-Api-Key"
+ * )
+ */
+
 return function (App $app) {
     $app->options('/{routes:.*}', function (Request $request, Response $response) {
         // CORS Pre-Flight OPTIONS Request Handler
         return $response;
     });
+    $app->group('', function () use ($app) {
+        $app->post('/estado', EstadoController::class . ':insert');
+        $app->get('/estado', EstadoController::class . ':index');
+        $app->get('/estado/{id}', EstadoController::class . ':show');
+        $app->put('/estado/{id}', EstadoController::class . ':update');
+        $app->delete('/estado/{id}', EstadoController::class . ':delete');
 
-    $app->post('/estado', EstadoController::class . ':insert');
-    $app->get('/estado', EstadoController::class . ':index');
-    $app->get('/estado/{id}', EstadoController::class . ':show');
-    $app->put('/estado/{id}', EstadoController::class . ':update');
-    $app->delete('/estado/{id}', EstadoController::class . ':delete');
-
-    $app->post('/cidade', CidadeController::class . ':insert');
-    $app->get('/cidade', CidadeController::class . ':index');
-    $app->get('/cidade/{id}', CidadeController::class . ':show');
-    $app->put('/cidade/{id}', CidadeController::class . ':update');
-    $app->delete('/cidade/{id}', CidadeController::class . ':delete');
+        $app->post('/cidade', CidadeController::class . ':insert');
+        $app->get('/cidade', CidadeController::class . ':index');
+        $app->get('/cidade/{id}', CidadeController::class . ':show');
+        $app->put('/cidade/{id}', CidadeController::class . ':update');
+        $app->delete('/cidade/{id}', CidadeController::class . ':delete');
+    })->add(new ApiKeyMiddleware($app->getContainer()));
+    
 
     $app->get('/home', function ($request, $response, $args) {
-            return $this->get('view')->render($response, 'home.php', []);
+        return $this->get('view')->render($response, 'home.php', []);
     });
 };
